--- a/mysite/home/templates/base.html
+++ b/mysite/home/templates/base.html
@@ -11,10 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     
     <!--Fonts from Googlefonts-->
-    <!--font-family: 'Open Sans', sans-serif; font-family: 'Roboto', sans-serif;-->
+    <!--font-family: 'Roboto', sans-serif; font-family: 'Source Sans Pro', sans-serif;-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!--Css local-->
     {% load static %}
     <link href="{% static 'css\main.css'%}" rel="stylesheet">
@@ -95,7 +95,8 @@
             {% endblock content1 %}
           </div>
 
-          <div class="col-lg-4">
+
+          <div class="col-lg-4 linea-lateral">
             {% block content2 %}
             {% endblock content2 %}
           </div>          
@@ -110,28 +111,34 @@
   </section>
 
       <!--Footer Section-->
-      <footer class='bg-white footer-c'>
+      <footer class='footer-c'>
         <div class="container">
           <div class="row">
-            <div class="col-md-9 text-justify">
+            <div class="col-md-4 text-justify">
+              <div class="container">
               <a href="#" class="navbar-logo"><span style="color: var(--blueDark);">Lav</span><span style="color:var(--blueLightDark)">Code</span></a>
               
               <p class="text-justify">
-                Esta página (cuyo nombre surge de jugar un poco con mi apellido y el inglés) nace como un proyecto personal para mejorar mis habilidades de programación, mientras voy documentando mi experiencia en este campo.<br/><br> El objetivo es que la información aquí publicada también pueda ser de ayuda para otras personas que a su vez quieran empezar a aprender y necesiten un pequeño referente que los guíe en este vasto mundo de la programación. 
+                Esta página nace como un proyecto personal que pretende documentar mi experiencia en ciertos campos de la programación.<br/> Espero que la información aquí publicada también pueda ser de ayuda para otras personas que a su vez quieran empezar a aprender y necesiten un pequeño referente que los guíe en este vasto mundo de la programación. 
 
               </p>
+            </div>
+          </div>
 
-            </div>
+          <div class="col-md-4">
+            {% block footer1 %}
+            {% endblock footer1 %}
+          </div>            
             
-            <div class="col-md-3">
-              {% block footer %}
-              {% endblock footer %}
-            </div>
+          <div class="col-md-4">
+            {% block footer2 %}
+            {% endblock footer2 %}
+          </div>
             
             </div>
           </div>
           <div class="w-100 text-center p-0">
-            <span>Made by Cristian Lavacude &copy; 2021.All rights reserved</span>
+            <span>Made by Cristian Lavacude &copy; 2021.</span>
           </div>
         </div>
       </footer>
