--- a/mysite/home/templates/base.html
+++ b/mysite/home/templates/base.html
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse text-right" id="navbarTogglerDemo02">
             <ul class="navbar-nav mx-md-auto">
               <li class="nav-item mx-lg-auto">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Inicio</a>
               </li>
               
               <li class="nav-item dropdown mx-md-2">
@@ -90,13 +90,13 @@
     <section class="hero py-md-4">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-md-8">
             {% block content1 %}
             {% endblock content1 %}
           </div>
 
 
-          <div class="col-lg-4 linea-lateral">
+          <div class="col-md-4 linea-lateral">
             {% block content2 %}
             {% endblock content2 %}
           </div>          
