--- a/mysite/home/static/css/main.css
+++ b/mysite/home/static/css/main.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5{
 /*Header*/
 
 .navbar{
-    font-size:1.4vw;
+    font-size:1rem;
     text-align: center;
 }
 
@@ -30,7 +30,7 @@ h1,h2,h3,h4,h5{
     margin:0;
     width: 25%;
     text-align: left;
-    font-size: 3vw;
+    font-size: 4vh;
     text-decoration: none;
     font-weight: 300;
 }
@@ -86,7 +86,34 @@ h1,h2,h3,h4,h5{
     box-shadow: 0.2rem .2rem .15rem rgba(0,0,0,.075)
 }
 
+.post-link {
+    text-decoration: none;
+    color:var(--black);
+}
+.post-link:hover{
+    color: var(--black);
+}
 
+/*Login Template*/
+.btn-center{
+    position: relative;
+    background-color: var(--blueDark);
+    border-color: var(--blueDark);
+    left: 45%;
+}
+
+.alert-login{
+    color:rgb(182, 19, 19);
+    border: .1rem solid rgb(182, 19, 19);
+    border-radius: .5rem;
+    text-align: center;
+}
+
+
+.btn-center:hover{
+    background-color: var(--blueLightDark);
+    border-color: var(--blueDark);
+} 
  
 
 
@@ -99,7 +126,6 @@ h1,h2,h3,h4,h5{
     }
 
     .navbar{
-        font-size:4vw;
         text-align: center;
     }
 
