--- a/mysite/home/static/css/main.css
+++ b/mysite/home/static/css/main.css
@@ -28,9 +28,8 @@ h1,h2,h3,h4,h5{
 .navbar-logo{
     padding: 0;
     margin:0;
-    width: 25%;
     text-align: left;
-    font-size: 4vh;
+    font-size: 3rem;
     text-decoration: none;
     font-weight: 300;
 }
@@ -94,6 +93,55 @@ h1,h2,h3,h4,h5{
     color: var(--black);
 }
 
+/*Paginator */
+
+.paginator{
+    font-size: 1rem;
+    border:.1rem solid rgb(216, 214, 214);
+    color: black;
+    border-radius:.2rem ;
+    padding: .3rem .7rem .3rem .7rem;
+    margin: 0;
+    font-size: large;
+}
+
+.paginator a{
+    color: var(--blueDark);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.btn-paginator{
+    color:rgb(216, 214, 214);
+    background-color: var(--blueDark);
+    border:.1rem solid rgb(216, 214, 214);
+    border-radius:.2rem ;
+    font-size: 1rem;
+    padding: .4rem .7rem .4rem .7rem;
+}
+
+.btn-paginator a{
+    color:rgb(216, 214, 214);
+    text-decoration: none;
+    font-family:'Roboto',sans-serif;
+    font-weight: bold;
+}
+
+.paginator-label{
+    position: relative;
+    font-size: 1rem;
+    left: 0;
+    top:25%;
+    border:.1rem solid rgb(216, 214, 214);
+    border-radius:.2rem ;
+    padding: .1rem .1rem .1rem .1rem;
+    margin: 0;
+    font-size: medium;
+}
+
+
+
+
 /*Login Template*/
 .btn-center{
     position: relative;
@@ -122,7 +170,7 @@ h1,h2,h3,h4,h5{
 /*Responsive menu nav fon size*/
 @media only screen and (max-width: 767px) {
     .navbar-logo{
-        font-size: 6vh;
+        font-size: 3rem;
     }
 
     .navbar{
@@ -133,6 +181,15 @@ h1,h2,h3,h4,h5{
         border-top: medium solid rgb(216, 214, 214);
         border-left: none;
         padding-top: 1rem;
+      }
+  }
+
+  @media only screen and (max-width: 320px){
+      .paginator{
+          font-size: small;
+      }
+      .btn-paginator{
+          font-size: small;
       }
   }
 
