Pruebas database y correcion template

--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -14,8 +14,8 @@
                 <h2> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h2>
                 <p>{{post.descripcion}}</p>
                 <span style="font-size:0;">{% for categoria in post.categoria.all %} {{ categoria }}{% endfor %}</span>
-                <p>{% lorem 20 p random %}</p>
             </div>
+            <div class="col-12">{{post.contenido|safe}}</div>
         </div>
     </div>
 {% else %}
