--- a/mysite/home/templates/base.html
+++ b/mysite/home/templates/base.html
@@ -73,7 +73,7 @@
 
 
             <form class="d-flex mr-md-auto">
-              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <input class="form-control me-2" type="text" placeholder="Buscar" aria-label="Search" name="search"  {% if search %} value="{{ search }}" {% endif %}>
               <button class="btn btn-outline-blue" type="submit">Buscar</button>
             </form>
             
