--- a/mysite/home/templates/base.html
+++ b/mysite/home/templates/base.html
@@ -57,7 +57,7 @@
               </li>
 
               <li class="nav-item mx-lg-auto">
-                <a class="nav-link" aria-current="page" href="#">Blog</a>
+                <a class="nav-link" aria-current="page" href="{% url 'blog:all' %}">Blog</a>
               </li>
               
               <!-- <li class="nav-item dropdown mx-md-2">
