--- a/mysite/home/templates/home/home_list.html
+++ b/mysite/home/templates/home/home_list.html
@@ -18,7 +18,7 @@
                 <img class="img-fluid mr-md-auto" alt="{{post.slug}}" src="{{post.imagen}}"> <!--img-fluid imagen inicio de post(responsive a su contenedor)-->
             </div>
             <div class="col-md-9">
-                <h2><a class="post-link"href="{% url 'blog:post_detail' post.id %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h2>
+                <h2><a class="post-link"href="{% url 'blog:post_detail' post.slug %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h2>
                 <p>{{post.descripcion}}</p> 
                 <span style="font-size:0;">{% for categoria in post.categoria.all %} {{ categoria }}{% endfor %}</span>
             </div>
@@ -73,7 +73,7 @@
                 <img class="img-fluid" alt="{{post.slug}}" src="{{post.imagen}}"> <!--img-fluid imagen inicio de post(responsive a su contenedor)-->
             </div>
             <div class="col-md-9">
-                <h4><a class="post-link" href="{% url 'blog:post_detail' post.id %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h4>
+                <h4><a class="post-link" href="{% url 'blog:post_detail' post.slug %}"> {{post.titulo}}</a><br><span class="fecha-p"><i class="far fa-calendar-alt"></i> {{post.creacion_en|date}}</span></h4>
                 <p>{{post.descripcion}}</p> 
             </div>
         </div>
@@ -90,7 +90,7 @@
     <div class="row align-items-center">
         {% for categoria in categorias %}
         <div class="shadow-pre col-6 col-sm-5 offset-sm-1 text-center">
-            <a class="post-link" href="{% url 'home:all' %}?search={{categoria.nombre}}">{{categoria.nombre}}</a>
+            <a class="post-link" href="{% url 'blog:all' %}?search={{categoria.nombre}}">{{categoria.nombre}}</a>
         </div>
     {% endfor %}
 </div>
