--- a/mysite/home/static/css/main.css
+++ b/mysite/home/static/css/main.css
@@ -67,6 +67,11 @@ h1,h2,h3,h4,h5{
     border-radius: 2px;
 }
 
+.resaltar{
+    border: 1px solid gray;
+    background-color: rgba(230, 230, 230, 0.75)!important;
+}
+
 /* Css home_list*/
 .fecha-p{
     font-style: italic;
