--- a/mysite/home/templates/base.html
+++ b/mysite/home/templates/base.html
@@ -42,10 +42,10 @@
           <div class="collapse navbar-collapse text-right" id="navbarTogglerDemo02">
             <ul class="navbar-nav mx-md-auto">
               <li class="nav-item mx-lg-auto">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="{% url 'home:all' %}">Inicio</a>
               </li>
               
-              <li class="nav-item dropdown mx-md-2">
+              <!-- <li class="nav-item dropdown mx-md-2">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tablas resumen
                 </a>
@@ -54,7 +54,7 @@
                   <li><a class="dropdown-item" href="#">Django</a></li>
                   <li><a class="dropdown-item" href="#">Mql5</a></li>
                 </ul>
-              </li>
+              </li> -->
 
               <li class="nav-item mx-lg-auto">
                 <a class="nav-link" aria-current="page" href="{% url 'blog:all' %}">Blog</a>
@@ -89,7 +89,15 @@
         </div>
     </nav>
 
-
+    <!--Section Expand-->
+    <section class="hero py-md-4">
+      <div class="container">
+        <div class="row">
+          {% block contentExpand %}
+          {% endblock contentExpand %}
+        </div>
+      </div>
+    </section>
 
 
 
