--- a/mysite/home/templates/home/home.html
+++ b/mysite/home/templates/home/home.html
@@ -1,1 +1,19 @@
 {% extends 'base.html' %}
+
+{% block contentExpand %}
+<div class="col-12 p-5 m-auto rounded-2 resaltar">
+ <div class="row">
+    <div class="col-12 col-sm-4">
+        <img class="img-fluid"src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Njh8fGNvZGUlMjBsYW5ndWFnZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="imgen-presentacion">
+    </div>
+
+    <div class="col col-sm">
+        <h1>Bienvenido a LavCode</h1>
+         <p>Mi nombre es Cristian David Lavacude Galvis y esta pagina es una manera de llevar una documentacion en mi camino como desarrollador web. Debo mencionar de entrada que aún no soy un experto en el tema (lo mas dificil de todo es empezar y en eso estamos), pero una de las maneras que se aprende a programar es practicando todo lo posible y esta pagina es una forma de aplicar mis conocimientos y al mismo tiempo compartirlos con los que lo necesiten.</p>
+         <p>Hablando un poco mas de mi, puedo decir que estudié Ingeniería Eléctrica y empecé seriamnete en el mundo de la programación en el año 2020, de momento mis conocimientos son basicos pero con disciplina y buena actitud estoy seguro de que puedo convertir algo que parecia un hobby a una manera de ganar dinero mientras hago algo que me apasiona.</p>
+    </div>
+
+
+ </div>
+</div>
+{% endblock contentExpand %}
